k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smart-atm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: smart-atm
  template:
    metadata:
      labels:
        app: smart-atm
    spec:
      containers:
      - name: smart-atm
        image: mahendra46/smart-atm:latest
        ports:
        - containerPort: 8501
        livenessProbe:
  httpGet:
    path: /
    port: 8501
  initialDelaySeconds: 30
  periodSeconds: 10

readinessProbe:
  httpGet:
    path: /
    port: 8501
  initialDelaySeconds: 5
  periodSeconds: 5
