k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smart-atm-service
spec:
  type: LoadBalancer
  selector:
    app: smart-atm
  ports:
    - port: 80
      targetPort: 8501
